added scope 1 emissions endpoint
